<resources>
    <string name="app_name">My Bar</string>
    <string name="accedi">accedi</string>
    <string name="registrati">Registrati</string>
    <string name="accedi_come_ospite">accedi come ospite</string>
    <string name="ricorda_credenziali">ricorda credenziali</string>
    <string name="x">X</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="conferma_password">conferma password</string>
    <string name="username">username</string>
    <string name="conferma">conferma</string>
    <string name="login_error_message">email o password non valida</string>
    <string name="login_error_title">ERRORE CREDENZIALI</string>
    <string name="title_activity_maps">MyBar Map</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="permission_required_toast">permission required toast</string>
    <string name="permission_rationale_location">permission rationale location</string>
    <string name="psw_error">ERRORE PASSWORD</string>
    <string name="psw_not_equal">le password non corrispondono</string>
    <string-array name="user_types">
        <item>possiedo un bar</item>
        <item>sono un cliente</item>
    </string-array>
    <string name="title_activity_my">MyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_profile">my profile</string>
    <string name="logout">logout</string>
    <string name="UserString">Utente:</string>
    <string name="aggiungi_bar">aggiungi bar</string>
    <string name="modifica_men">modifica menù</string>
    <string name="prezzo">prezzo</string>
    <string name="nome">Nome</string>
    <string name="add">add</string>
    <string name="aggiungi_al_men">aggiungi al menù</string>
    <string name="aggiungi_foto">aggiungi foto</string>
    <string name="facebook_app_id">1167213520116477</string> <string name="fb_login_protocol_scheme">fb1167213520116477</string>
    <string name="inserisci_il_nome_del_tuo_bar">inserisci il nome del tuo bar</string>

</resources>
