<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@color/ColorPrimary"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="310dp"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username_text"
        android:textSize="17dp"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="149dp"
        android:layout_height="137dp"
        android:contentDescription="@string/my_profile"
        android:background="@drawable/ic_person" />

    <Button
        android:id="@+id/setBarLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggiungi_bar"
        android:layout_marginStart="30dp"
        android:onClick="setBarLocation"
        android:layout_marginTop="200dp"

        />
    <Button
        android:id="@+id/editMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setBarLoc"
        android:text="@string/modifica_men"
        android:layout_below="@+id/setBarLoc"
        android:onClick="updateMenu"/>


    <Button
        android:id="@+id/logout"
        android:onClick="logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:layout_alignEnd="@id/txtClose"
        android:text="@string/logout" />
    <EditText
        android:id="@+id/barNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:hint="@string/inserisci_il_nome_del_tuo_bar"
        android:layout_alignStart="@+id/imageButton"
        />

</RelativeLayout>