<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@android:color/background_light"

    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtClose"
        android:layout_marginEnd="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:text="@string/x"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:autofillHints=""
            android:inputType="text" tools:targetApi="o" />
        <EditText
            android:id="@+id/email"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints=""
            android:inputType="textEmailAddress" tools:targetApi="o" />

        <EditText

            android:id="@+id/psw"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" tools:targetApi="o" />
        <EditText

            android:id="@+id/pswConf"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conferma_password"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" tools:targetApi="o" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="20dp"
            android:text="@string/registrati"
            android:onClick="registrationClick"/>


    </LinearLayout>

</LinearLayout>