<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <Button
        android:id="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="180dp"
        android:onClick="loginWindow"
        android:text="@string/accedi"
        tools:targetApi="o" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="250dp"
        android:onClick="registrationWindow"
        android:text="@string/registrati"
        tools:targetApi="o" />

    <Button
        android:id="@+id/notRegUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="320dp"
        android:text="@string/accedi_come_ospite"
        tools:targetApi="o" />


</RelativeLayout>